Fix event card paddings on mobile view

--- a/src/domain/eventSearch/eventCard.module.scss
+++ b/src/domain/eventSearch/eventCard.module.scss
@@ -43,7 +43,6 @@ $imageWidth: 22.75rem;
 .infoWrapper {
   display: grid;
   padding: $basePadding;
-  padding-left: 2rem;
   grid-template-rows: auto 1fr auto;
 
   .categoryWrapperDesktop {
@@ -114,6 +113,7 @@ $imageWidth: 22.75rem;
 
     .buyButtonWrapper {
       flex: 1 1 0%;
+      margin-right: 0.25rem;
 
       @include respond_above(sm) {
         flex: none;
@@ -121,12 +121,12 @@ $imageWidth: 22.75rem;
 
       button {
         margin-top: 0.25rem;
-        margin-right: 0.25rem;
       }
     }
 
     .readMoreButtonWrapper {
       flex: 1 1 0%;
+      margin-left: 0.25rem;
 
       @include respond_above(sm) {
         flex: none;
@@ -134,7 +134,6 @@ $imageWidth: 22.75rem;
 
       button {
         margin-top: 0.25rem;
-        margin-left: 0.25rem;
       }
     }
   }
